--- a/Semana 4/Untitled.ipynb
+++ b/Semana 4/Untitled.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "Name: target, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "Name: comment_text, Length: 541462, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,28 +265,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.svm import SVR\n",
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
-    "vectorizer = CountVectorizer()\n",
+    "vectorizer = CountVectorizer(lowercase =True, token_pattern=r'\\b\\w+\\b', stop_words='english')\n",
     "train_vectors = vectorizer.fit_transform(X_train)\n",
-    "test_vectors = vectorizer.transform(X_test)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rf = RandomForestRegressor(random_state = 42)\n",
-    "rf.fit(train_vectors, y_train)\n",
+    "test_vectors = vectorizer.transform(X_test)\n",
     "\n",
-    "predictions = rf.predict(test_vectors)\n",
+    "svr = SVR(kernel='linear')\n",
+    "svr.fit(train_vectors, y_train)\n",
+    "predictions = svr.predict(test_vectors)\n",
+    "\n",
     "mse = mean_squared_error(y_test, predictions)\n",
     "print(\"MSE:\", mse)"
    ]
@@ -297,89 +290,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf = RandomForestRegressor(lowercase = False ,random_state = 42)\n",
-    "rf.fit(train_vectors, y_train)\n",
     "\n",
-    "predictions = rf.predict(test_vectors)\n",
     "mse = mean_squared_error(y_test, predictions)\n",
     "print(\"MSE:\", mse)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Punto 2 - Tokenización con CountVectorizer y trigramas\n",
-    "\n",
-    "En la celda 2 creen y entrenen el mismo modelo de regresión del punto anterior (es decir si usaron un RandomForestRegresor usen nuevamente ese regresor), para que prediga la probabilidad de que un comentario sea tóxico, usando los set de entrenamiento y test definidos anteriormente. Usen la función CountVectorizer **considerando trigramas** para preprocesar los comentarios y presenten el desempeño del modelo con la métrica del MSE.\n",
-    "\n",
-    "Recuerden que el preprocesamiento que se haga sobre los datos de entrenamiento  (*.fit_transform()*) deben ser aplicado al set de test (*.transform()*)."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Celda 2\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Punto 3 - TfidfVectorizer\n",
-    "\n",
-    "Investigen sobre la función TfidfVectorizer. En la celda de texto 3, expliquen en qué consiste esta técnica de tokenización (describanla y expliquen su funcionamiento) y cúales son las ventajas o deventajas de su uso al compararlo con la función CountVectorizer."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Celda 3\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Punto 4 - Tokenización con TfidfVectorizer\n",
-    "\n",
-    "En la celda 4 creen y entrenen el mismo modelo de regresión del primer punto, para que prediga la probabilidad de que un comentario sea tóxico, usando los set de entrenamiento y test definidos anteriormente. Procesen los comentarios con la función **TfidfVectorizer** y presenten el desempeño del modelo con la métrica del MSE.\n",
-    "\n",
-    "Recuerden que el preprocesamiento que se haga sobre los datos de entrenamiento  (*.fit_transform()*) deben ser aplicado al set de test (*.transform()*)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Celda 4\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Punto 5 - Comparación y análisis de resultados\n",
-    "\n",
-    "En la celda 5 comparen los resultados obtenidos de los diferentes modelos y comenten cómo el preprocesamiento de texto afecta el desempeño."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Celda 5"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -399,8 +320,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
-  },
-  "name": "_merged"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
