--- a/Semana 4/S4TC1_Tokenizacion.ipynb
+++ b/Semana 4/S4TC1_Tokenizacion.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "4   865998  The dirty little secret is that the price rang...     0.3"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "Name: target, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "Name: comment_text, Length: 541462, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,42 +265,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.svm import SVR\n",
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
-    "vectorizer = CountVectorizer()\n",
+    "vectorizer = CountVectorizer(lowercase=True, token_pattern=r'\\b\\w+\\b', stop_words='english')\n",
     "train_vectors = vectorizer.fit_transform(X_train)\n",
-    "test_vectors = vectorizer.transform(X_test)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rf = RandomForestRegressor(random_state = 42)\n",
-    "rf.fit(train_vectors, y_train)\n",
+    "test_vectors = vectorizer.transform(X_test)\n",
     "\n",
-    "predictions = rf.predict(test_vectors)\n",
-    "mse = mean_squared_error(y_test, predictions)\n",
-    "print(\"MSE:\", mse)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rf = RandomForestRegressor(lowercase = False ,random_state = 42)\n",
-    "rf.fit(train_vectors, y_train)\n",
+    "svr = SVR(kernel='linear')\n",
+    "svr.fit(train_vectors, y_train)\n",
+    "predictions = svr.predict(test_vectors)\n",
     "\n",
-    "predictions = rf.predict(test_vectors)\n",
     "mse = mean_squared_error(y_test, predictions)\n",
     "print(\"MSE:\", mse)"
    ]
@@ -335,12 +314,101 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Celda 3\n"
+    "La función TfidfVectorizer genera una matriz de de terminos-pesos, es decir, que de cada termino encontrado por dicha libreria en el texto representa una palabra y un peso. Este peso representa la importancia relativa de esa palabra o termino en la base de datos (textos) en comparación con el texto completo o total de registros de texto. \n",
+    "\n",
+    "Dicha librería contiene la técnica TF-IDF (Term Frequency - Inverse Data Frequency), la cual se basa en dos medidas: la Frecuencia de Término/palabra (TF) y la Inversa de Frecuencia de Documento (IDF). La Frecuencia de Término/palabra es una medida de la frecuencia con la que un término específico aparece en un texto. A continuación se muestra la formula para realizar el calculo: \n",
+    "\n",
+    "> $tf_{ij} = \\frac{n_{ij}}{\\sum_{k}n_{ij}}$\n",
+    "\n",
+    "donde i es el termino y j el texto(entiendase como un registro o texto capturado). Entonces seria como el número de veces que aparece el término \"i\" en el texto \"j\") / (Número total de términos en el texto \"j\").\n",
+    "\n",
+    "La Inversa de Frecuencia de Documento es una medida de la rareza del término en todo el conjunto. La formula seria la siguiente:\n",
+    "\n",
+    "> $idf(w) = log(\\frac{N}{df_{t}})$\n",
+    "\n",
+    "En esta fórmula, el numerador es el número total de textos en la base de datos, mientras que el denominador cuenta el número de textos que contienen el término \"t\" en el total de la abse de datos. Dividiendo el numerador por el denominador, obtenemos la proporción de textos que no contienen el término \"t\" en relación al número total de textos. Luego, tomamos el logaritmo natural de esta proporción para obtener un valor positivo que aumenta a medida que disminuye el número de textos que contienen el término \"t\".\n",
+    "\n",
+    "Ahora para calcular el TF-IDF basta con multiplicar TF y IDF. La formula seria la siguiente:\n",
+    "\n",
+    "> $w_{ij} = tf_{ij}  * log(\\frac{N}{df_{i}})$\n",
+    "\n",
+    "Para entender como funciona se plantea el siguiente ejemplo práctico:\n",
+    "\n",
+    "Supongamos que tenemos un conjunto de cuatro textos (D1, D2, D3, D4) y queremos calcular el valor de TF-IDF para el término \"datos\" en cada documento. Supongamos que el término \"datos\" aparece de la siguiente manera en cada texto:\n",
+    "\n",
+    "- D1: \"Los datos son importantes en la toma de decisiones\"\n",
+    "- D2: \"La cantidad de información recopilada es abrumadora\"\n",
+    "- D3: \"El análisis de datos puede ser complejo\"\n",
+    "- D4: \"El aprendizaje automático se basa en los datos\"\n",
+    "\n",
+    "Para calcular la Frecuencia de Término de \"datos\" en cada texto, contamos el número de veces que aparece \"datos\" en cada texto y lo dividimos por el número total de términos en el texto:\n",
+    "\n",
+    "- TF(\"datos\", D1) = 1/7 = 0.1429\n",
+    "- TF(\"datos\", D2) = 0\n",
+    "- TF(\"datos\", D3) = 1/5 = 0.2\n",
+    "- TF(\"datos\", D4) = 1/6 = 0.1667\n",
+    "\n",
+    "Observa que en el texto D2 el término \"datos\" no aparece en absoluto, por lo que su frecuencia de término es cero.\n",
+    "\n",
+    "Para calcular la Inversa de Frecuencia de Documento de \"datos\" en todo el conjunto de textos, contamos el número de textos que contienen \"datos\" y lo dividimos por el número total de textos. Luego, tomamos el logaritmo natural de este cociente:\n",
+    "\n",
+    "- IDF(\"datos\", {D1, D2, D3, D4}) = log(4/3) = **0.2877**\n",
+    "\n",
+    "En este caso, el valor de IDF es distinto de cero porque el término \"datos\" no aparece en uno de los textos. El valor de IDF es mayor que cero pero no demasiado alto, lo que sugiere que el término \"datos\" es relativamente común en el conjunto de textos.\n",
+    "\n",
+    "Finalmente, para calcular el valor de TF-IDF de \"datos\" en cada documento, multiplicamos el valor de TF por el valor de IDF:\n",
+    "\n",
+    "- TF-IDF(\"datos\", D1) = 0.1429 * 0.2877 = 0.0411\n",
+    "- TF-IDF(\"datos\", D2) = 0 * 0.2877 = 0\n",
+    "- TF-IDF(\"datos\", D3) = 0.2 * 0.2877 = 0.0575\n",
+    "- TF-IDF(\"datos\", D4) = 0.1667 * 0.2877 = 0.048\n",
+    "\n",
+    "Se observa que el valor de TF-IDF para \"datos\" en cada texto es distinto de cero, excepto en D2, donde no aparece el término \"datos\". Además, el valor de TF-IDF es más alto en los textos donde el término \"datos\" es más relevante para la comprensión del texto (por ejemplo, D3, donde se habla del \"análisis de datos\"), y más bajo en los textos donde el término \"datos\" es menos relevante (por ejemplo, D1, donde se habla de que \"los datos son importantes en la toma de decisiones\", pero no se profundiza demasiado en el tema)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ventajas y desventajas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La ventaja de TfidfVectorizer sobre CountVectorizer es que TfidfVectorizer considera tanto la frecuencia de un término en un documento como la frecuencia de aparición del término en todo el conjunto de textos, mientras que CountVectorizer solo considera la frecuencia de aparición del término en el texto. Por lo tanto, TfidfVectorizer puede dar una mayor importancia a los términos que son raros en todo el conjunto pero frecuentes en un texto en particular, lo que puede ser útil para identificar palabras clave en un conjunto de textos.\n",
+    "\n",
+    "Además, TfidfVectorizer también puede aplicar técnicas de preprocesamiento adicionales, como la eliminación de palabras comunes (stop words), la reducción de palabras a su forma básica (stemming) y la corrección de errores tipográficos.\n",
+    "\n",
+    "Sin embargo, una desventaja de TfidfVectorizer es que puede ser más lento que CountVectorizer para conjuntos de datos grandes debido a que requiere un cálculo adicional, IDF. También puede ser menos útil en situaciones en las que la frecuencia de un término es más importante que su importancia relativa en todo el conjunto de textos, como en la identificación de nombres de personas o lugares en un texto."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|                       | TfidfVectorizer             | CountVectorizer             |\n",
+    "|-----------------------|------------------------------|------------------------------|\n",
+    "| Ventajas              | - Da más peso a términos raros | - Útil para análisis simples |\n",
+    "|                       |   que pueden ser más         |   de frecuencia de términos  |\n",
+    "|                       |   relevantes                  |                              |\n",
+    "|                       | - Menos sensible a palabras   | - Sensible a palabras comunes |\n",
+    "|                       |   comunes que no aportan      |   que pueden ser ruido       |\n",
+    "|                       |   mucha información           | - Es más rápido y simple     |\n",
+    "|                       | - Útil para tareas de         | - Es adecuado para tareas de  |\n",
+    "|                       |   clasificación y recuperación|   clasificación y recuperación|\n",
+    "| Desventajas           | - No es bueno para tareas de  | - Da igual importancia a     |\n",
+    "|                       |   análisis simples de         |   palabras comunes y         |\n",
+    "|                       |   frecuencia de términos      |   palabras raras             |\n",
+    "|                       | - Puede no ser efectivo si    | - No da más peso a palabras  |\n",
+    "|                       |   los términos más comunes    |   más raras o relevantes     |\n",
+    "|                       |   son importantes             |                              |\n",
+    "|                       | - Es más lento y computacional| - No toma en cuenta la       |\n",
+    "|                       |   intensivo que CountVectorizer|   relevancia de los términos |"
    ]
   },
   {
