--- a/Semana 5/S5TC1_Analisis_Sentimientos.ipynb
+++ b/Semana 5/S5TC1_Analisis_Sentimientos.ipynb
@@ -538,7 +538,8 @@
     "             'through', 'to', 'too','under', 'until', 'up', 've', 'very', 'was',\n",
     "             'we', 'were', 'what', 'when', 'where','which','while', 'who', 'whom',\n",
     "             'why', 'will', 'with', 'won', 'y', 'you', \"youd\",\"youll\", \"youre\",\n",
-    "             \"youve\", 'your', 'yours', 'yourself', 'yourselves','left', 'dont', 'doesnt', 'im', 'hes', 'shes', 'isnt','wont']\n",
+    "             \"youve\", 'your', 'yours', 'yourself', 'yourselves','left', 'dont', 'doesnt', \n",
+    "             'im', 'hes', 'shes', 'isnt','wont','n']\n",
     "\n",
     "# Define function to clean text\n",
     "def clean_text(text):\n",
