--- a/genres_classifier.ipynb
+++ b/genres_classifier.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2348,7 +2348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2497,7 +2497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2553,7 +2553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2567,6 +2567,29 @@
     "\n",
     "ns = api.namespace('predict', \n",
     "     description='Clasificador de géneros')\n",
+    "\n",
+    "parser = api.parser()\n",
+    "\n",
+    "parser.add_argument(\n",
+    "    'year',\n",
+    "    type = int,\n",
+    "    required = True\n",
+    ")\n",
+    "parser.add_argument(\n",
+    "    'title',\n",
+    "    type = str,\n",
+    "    required = True\n",
+    ")\n",
+    "parser.add_argument(\n",
+    "    'plot',\n",
+    "    type = str,\n",
+    "    required = True\n",
+    ")\n",
+    "parser.add_argument(\n",
+    "    'rating',\n",
+    "    type = float,\n",
+    "    required = True\n",
+    ")\n",
     "\n",
     "resource_fields = api.model('Resource', {\n",
     "    'result': fields.String,\n",
@@ -2591,10 +2614,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 56,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "@ns.route('/')\n",
     "class GenresApi(Resource):\n",
@@ -2618,7 +2639,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@ns.route('/')\n",
+    "class PhishingApi(Resource):\n",
+    "    @api.doc(parser=parser)\n",
+    "    @api.marshal_with(resource_fields)\n",
+    "    def get(self):\n",
+    "        args = parser.parse_args()\n",
+    "        return {\n",
+    "            \"result\": predict_genres(args['year'], args['title'], args['plot'], args['rating'])\n",
+    "            }, 200"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2637,10 +2675,10 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [26/May/2023 15:41:59] \"\u001b[31m\u001b[1mGET /predict/ HTTP/1.1\u001b[0m\" 405 -\n",
-      "127.0.0.1 - - [26/May/2023 15:42:00] \"\u001b[31m\u001b[1mGET /predict/ HTTP/1.1\u001b[0m\" 405 -\n",
-      "127.0.0.1 - - [26/May/2023 15:43:46] \"\u001b[37mPOST /predict/ HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/May/2023 15:44:41] \"\u001b[37mPOST /predict/ HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [26/May/2023 18:29:31] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [26/May/2023 18:29:31] \"\u001b[37mGET /swagger.json HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [26/May/2023 18:29:31] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [26/May/2023 18:29:51] \"\u001b[37mGET /predict/?year=2008&title=Hi&plot=I%20love%20you&rating=7.7 HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
