--- a/genres_classifier.ipynb
+++ b/genres_classifier.ipynb
@@ -2689,6 +2689,352 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "absl-py==1.4.0Note: you may need to restart the kernel to use updated packages.\n",
+      "alabaster==0.7.12\n",
+      "anaconda-client==1.7.2\n",
+      "anaconda-navigator==1.10.0\n",
+      "anaconda-project==0.8.3\n",
+      "aniso8601==9.0.1\n",
+      "argh==0.26.2\n",
+      "argon2-cffi @ file:///C:/ci/argon2-cffi_1596828585465/work\n",
+      "asn1crypto @ file:///tmp/build/80754af9/asn1crypto_1596577642040/work\n",
+      "astroid @ file:///C:/ci/astroid_1592487315634/work\n",
+      "astropy==4.0.2\n",
+      "astunparse==1.6.3\n",
+      "async-generator==1.10\n",
+      "atomicwrites==1.4.0\n",
+      "attrs @ file:///tmp/build/80754af9/attrs_1604765588209/work\n",
+      "autopep8 @ file:///tmp/build/80754af9/autopep8_1596578164842/work\n",
+      "Babel @ file:///tmp/build/80754af9/babel_1605108370292/work\n",
+      "backcall==0.2.0\n",
+      "backports.functools-lru-cache==1.6.1\n",
+      "backports.shutil-get-terminal-size==1.0.0\n",
+      "backports.tempfile==1.0\n",
+      "backports.weakref==1.0.post1\n",
+      "bcrypt @ file:///C:/ci/bcrypt_1597936263757/work\n",
+      "beautifulsoup4 @ file:///tmp/build/80754af9/beautifulsoup4_1601924105527/work\n",
+      "bitarray @ file:///C:/ci/bitarray_1605065210072/work\n",
+      "bkcharts==0.2\n",
+      "bleach @ file:///tmp/build/80754af9/bleach_1600439572647/work\n",
+      "\n",
+      "blis==0.7.4\n",
+      "bokeh @ file:///C:/ci/bokeh_1603297934731/work\n",
+      "Boruta==0.3\n",
+      "boto==2.49.0\n",
+      "Bottleneck==1.3.2\n",
+      "branca==0.6.0\n",
+      "brotlipy==0.7.0\n",
+      "cachetools==5.3.0\n",
+      "catalogue==2.0.4\n",
+      "catboost==1.1.1\n",
+      "certifi==2020.6.20\n",
+      "cffi @ file:///C:/ci/cffi_1600699246375/work\n",
+      "chardet==3.0.4\n",
+      "click==7.1.2\n",
+      "cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1598884132938/work\n",
+      "clyent==1.2.2\n",
+      "cmdstanpy==0.9.5\n",
+      "colorama @ file:///tmp/build/80754af9/colorama_1603211150991/work\n",
+      "comtypes==1.1.7\n",
+      "conda==4.9.2\n",
+      "conda-build==3.20.5\n",
+      "conda-package-handling @ file:///C:/ci/conda-package-handling_1603003327818/work\n",
+      "conda-verify==3.4.2\n",
+      "contextlib2==0.6.0.post1\n",
+      "convertdate==2.4.0\n",
+      "cryptography @ file:///C:/ci/cryptography_1601046905460/work\n",
+      "cycler==0.10.0\n",
+      "cymem==2.0.5\n",
+      "Cython @ file:///C:/ci/cython_1594829190914/work\n",
+      "cytoolz==0.11.0\n",
+      "dask @ file:///tmp/build/80754af9/dask-core_1602083700509/work\n",
+      "decorator==4.4.2\n",
+      "defusedxml==0.6.0\n",
+      "diff-match-patch @ file:///tmp/build/80754af9/diff-match-patch_1594828741838/work\n",
+      "distributed @ file:///C:/ci/distributed_1605066635297/work\n",
+      "docutils==0.16\n",
+      "entrypoints==0.3\n",
+      "ephem==4.1.4\n",
+      "es-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.1.0/es_core_news_sm-3.1.0-py3-none-any.whl#sha256=10a582ef21c819073880cf3975d721b801ba2e8096bbfffd4f10612b0d6b979b\n",
+      "et-xmlfile==1.0.1\n",
+      "fastcache==1.1.0\n",
+      "filelock==3.0.12\n",
+      "flake8 @ file:///tmp/build/80754af9/flake8_1601911421857/work\n",
+      "Flask==1.1.2\n",
+      "flask-restx==1.1.0\n",
+      "flatbuffers==23.5.9\n",
+      "folium==0.14.0\n",
+      "fsspec @ file:///tmp/build/80754af9/fsspec_1602684995936/work\n",
+      "future==0.18.2\n",
+      "fuzzywuzzy==0.18.0\n",
+      "gast==0.4.0\n",
+      "geographiclib==2.0\n",
+      "geopy==2.3.0\n",
+      "gevent @ file:///C:/ci/gevent_1601397627942/work\n",
+      "glob2==0.7\n",
+      "google-auth==2.18.0\n",
+      "google-auth-oauthlib==1.0.0\n",
+      "google-pasta==0.2.0\n",
+      "gpytorch==1.9.1\n",
+      "graphviz==0.20.1\n",
+      "greenlet @ file:///C:/ci/greenlet_1600885448389/work\n",
+      "grpcio==1.54.0\n",
+      "h5py==2.10.0\n",
+      "HeapDict==1.0.1\n",
+      "hijri-converter==2.2.4\n",
+      "holidays==0.18\n",
+      "html5lib @ file:///tmp/build/80754af9/html5lib_1593446221756/work\n",
+      "htmlmin==0.1.12\n",
+      "idna @ file:///tmp/build/80754af9/idna_1593446292537/work\n",
+      "ImageHash==4.2.1\n",
+      "imageio @ file:///tmp/build/80754af9/imageio_1594161405741/work\n",
+      "imagesize==1.2.0\n",
+      "imbalanced-learn==0.10.1\n",
+      "imblearn==0.0\n",
+      "importlib-metadata==6.6.0\n",
+      "iniconfig @ file:///tmp/build/80754af9/iniconfig_1602780191262/work\n",
+      "intervaltree @ file:///tmp/build/80754af9/intervaltree_1598376443606/work\n",
+      "ipykernel @ file:///C:/ci/ipykernel_1596190155316/work/dist/ipykernel-5.3.4-py3-none-any.whl\n",
+      "ipython @ file:///C:/ci/ipython_1604083276484/work\n",
+      "ipython_genutils==0.2.0\n",
+      "ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1601490159889/work\n",
+      "isort @ file:///tmp/build/80754af9/isort_1602603989581/work\n",
+      "itsdangerous==1.1.0\n",
+      "jax==0.4.10\n",
+      "jdcal==1.4.1\n",
+      "jedi @ file:///C:/ci/jedi_1592833825077/work\n",
+      "Jinja2==2.11.2\n",
+      "joblib==1.2.0\n",
+      "json5==0.9.5\n",
+      "jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work\n",
+      "jupyter==1.0.0\n",
+      "jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1601311786391/work\n",
+      "jupyter-console @ file:///tmp/build/80754af9/jupyter_console_1598884538475/work\n",
+      "jupyter-core==4.6.3\n",
+      "jupyterlab==2.2.6\n",
+      "jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work\n",
+      "jupyterlab-server @ file:///tmp/build/80754af9/jupyterlab_server_1594164409481/work\n",
+      "keras==2.12.0\n",
+      "keyring @ file:///C:/ci/keyring_1601489747083/work\n",
+      "kiwisolver @ file:///C:/ci/kiwisolver_1604014703538/work\n",
+      "korean-lunar-calendar==0.3.1\n",
+      "lazy-object-proxy==1.4.3\n",
+      "libarchive-c==2.9\n",
+      "libclang==16.0.0\n",
+      "linear-operator==0.3.0\n",
+      "livelossplot==0.5.5\n",
+      "llvmlite==0.34.0\n",
+      "locket==0.2.0\n",
+      "LunarCalendar==0.0.9\n",
+      "lxml @ file:///C:/ci/lxml_1603216366346/work\n",
+      "Markdown==3.4.3\n",
+      "MarkupSafe==1.1.1\n",
+      "matplotlib @ file:///C:/ci/matplotlib-base_1603355780617/work\n",
+      "mccabe==0.6.1\n",
+      "menuinst==1.4.16\n",
+      "missingno==0.5.0\n",
+      "mistune==0.8.4\n",
+      "mkl-fft==1.2.0\n",
+      "mkl-random==1.1.1\n",
+      "mkl-service==2.3.0\n",
+      "ml-dtypes==0.1.0\n",
+      "mlxtend==0.21.0\n",
+      "mock==4.0.2\n",
+      "more-itertools @ file:///tmp/build/80754af9/more-itertools_1605111547926/work\n",
+      "mpmath==1.1.0\n",
+      "msgpack==1.0.0\n",
+      "multimethod==1.4\n",
+      "multipledispatch==0.6.0\n",
+      "murmurhash==1.0.5\n",
+      "navigator-updater==0.2.1\n",
+      "nbclient @ file:///tmp/build/80754af9/nbclient_1602783176460/work\n",
+      "nbconvert @ file:///C:/ci/nbconvert_1601914925608/work\n",
+      "nbformat @ file:///tmp/build/80754af9/nbformat_1602783287752/work\n",
+      "nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1605115881283/work\n",
+      "networkx @ file:///tmp/build/80754af9/networkx_1598376031484/work\n",
+      "nltk @ file:///tmp/build/80754af9/nltk_1592496090529/work\n",
+      "nose==1.3.7\n",
+      "notebook @ file:///C:/ci/notebook_1601501643625/work\n",
+      "numba==0.51.2\n",
+      "numexpr==2.7.1\n",
+      "numpy==1.23.5\n",
+      "numpydoc @ file:///tmp/build/80754af9/numpydoc_1605117425582/work\n",
+      "oauthlib==3.2.2\n",
+      "olefile==0.46\n",
+      "openpyxl @ file:///tmp/build/80754af9/openpyxl_1598113097404/work\n",
+      "opt-einsum==3.3.0\n",
+      "packaging==20.4\n",
+      "pandas @ file:///C:/ci/pandas_1602083338010/work\n",
+      "pandas-profiling==3.0.0\n",
+      "pandocfilters @ file:///C:/ci/pandocfilters_1605102497129/work\n",
+      "paramiko @ file:///tmp/build/80754af9/paramiko_1598886428689/work\n",
+      "parso==0.7.0\n",
+      "partd==1.1.0\n",
+      "path @ file:///C:/ci/path_1598358556930/work\n",
+      "pathlib2==2.3.5\n",
+      "pathtools==0.1.2\n",
+      "pathy==0.6.0\n",
+      "patsy==0.5.1\n",
+      "pep8==1.7.1\n",
+      "pexpect==4.8.0\n",
+      "phik==0.12.0\n",
+      "pickleshare==0.7.5\n",
+      "Pillow @ file:///C:/ci/pillow_1603823068645/work\n",
+      "pkginfo==1.6.1\n",
+      "plotly==5.13.1\n",
+      "pluggy==0.13.1\n",
+      "ply==3.11\n",
+      "preshed==3.0.5\n",
+      "progressbar2==4.2.0\n",
+      "prometheus-client==0.8.0\n",
+      "prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1602688806899/work\n",
+      "protobuf==4.23.0\n",
+      "psutil @ file:///C:/ci/psutil_1598370330503/work\n",
+      "PuLP==2.7.0\n",
+      "py @ file:///tmp/build/80754af9/py_1593446248552/work\n",
+      "pyasn1==0.5.0\n",
+      "pyasn1-modules==0.3.0\n",
+      "pycodestyle==2.6.0\n",
+      "pycosat==0.6.3\n",
+      "pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work\n",
+      "pycurl==7.43.0.6\n",
+      "pydantic==1.8.2\n",
+      "pydocstyle @ file:///tmp/build/80754af9/pydocstyle_1598885001695/work\n",
+      "pyflakes==2.2.0\n",
+      "pygam==0.8.0\n",
+      "Pygments @ file:///tmp/build/80754af9/pygments_1604103097372/work\n",
+      "pylint @ file:///C:/ci/pylint_1598617153160/work\n",
+      "PyMeeus==0.5.12\n",
+      "PyNaCl @ file:///C:/ci/pynacl_1595000047588/work\n",
+      "pyodbc===4.0.0-unsupported\n",
+      "pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1594392929924/work\n",
+      "pyparsing==2.4.7\n",
+      "pyproject==1.3.1\n",
+      "pyreadline==2.1\n",
+      "pyrsistent @ file:///C:/ci/pyrsistent_1600141795814/work\n",
+      "pyshp==2.3.1\n",
+      "PySocks==1.7.1\n",
+      "pystan==2.19.1.1\n",
+      "pytest==0.0.0\n",
+      "python-dateutil==2.8.1\n",
+      "python-jsonrpc-server @ file:///tmp/build/80754af9/python-jsonrpc-server_1600278539111/work\n",
+      "python-language-server @ file:///tmp/build/80754af9/python-language-server_1600454544709/work\n",
+      "python-utils==3.5.2\n",
+      "pytz==2020.1\n",
+      "PyWavelets @ file:///C:/ci/pywavelets_1601658407916/work\n",
+      "pywin32==227\n",
+      "pywin32-ctypes==0.2.0\n",
+      "pywinpty==0.5.7\n",
+      "PyYAML==5.3.1\n",
+      "pyzmq==19.0.2\n",
+      "QDarkStyle==2.8.1\n",
+      "QtAwesome @ file:///tmp/build/80754af9/qtawesome_1602272867890/work\n",
+      "qtconsole @ file:///tmp/build/80754af9/qtconsole_1600870028330/work\n",
+      "QtPy==1.9.0\n",
+      "regex @ file:///C:/ci/regex_1602770567298/work\n",
+      "requests @ file:///tmp/build/80754af9/requests_1592841827918/work\n",
+      "requests-oauthlib==1.3.1\n",
+      "rope @ file:///tmp/build/80754af9/rope_1602264064449/work\n",
+      "rsa==4.9\n",
+      "Rtree==0.9.4\n",
+      "ruamel_yaml==0.15.87\n",
+      "scikit-image==0.17.2\n",
+      "scikit-learn==1.2.2\n",
+      "scipy==1.10.1\n",
+      "seaborn @ file:///tmp/build/80754af9/seaborn_1600553570093/work\n",
+      "Send2Trash==1.5.0\n",
+      "setuptools-git==1.2\n",
+      "simplegeneric==0.8.1\n",
+      "singledispatch @ file:///tmp/build/80754af9/singledispatch_1602523705405/work\n",
+      "sip==4.19.13\n",
+      "six @ file:///C:/ci/six_1605187374963/work\n",
+      "smart-open==5.1.0\n",
+      "snowballstemmer==2.0.0\n",
+      "sortedcollections==1.2.1\n",
+      "sortedcontainers==2.2.2\n",
+      "soupsieve==2.0.1\n",
+      "spacy==3.1.0\n",
+      "spacy-legacy==3.0.8\n",
+      "Sphinx @ file:///tmp/build/80754af9/sphinx_1597428793432/work\n",
+      "sphinxcontrib-applehelp==1.0.2\n",
+      "sphinxcontrib-devhelp==1.0.2\n",
+      "sphinxcontrib-htmlhelp==1.0.3\n",
+      "sphinxcontrib-jsmath==1.0.1\n",
+      "sphinxcontrib-qthelp==1.0.3\n",
+      "sphinxcontrib-serializinghtml==1.1.4\n",
+      "sphinxcontrib-websupport @ file:///tmp/build/80754af9/sphinxcontrib-websupport_1597081412696/work\n",
+      "spyder @ file:///C:/ci/spyder_1599054115447/work\n",
+      "spyder-kernels @ file:///C:/ci/spyder-kernels_1599051709837/work\n",
+      "SQLAlchemy @ file:///C:/ci/sqlalchemy_1603818908746/work\n",
+      "srsly==2.4.1\n",
+      "statsmodels==0.12.0\n",
+      "sympy @ file:///C:/ci/sympy_1605101511098/work\n",
+      "tables==3.6.1\n",
+      "tangled-up-in-unicode==0.1.0\n",
+      "tblib @ file:///tmp/build/80754af9/tblib_1597928476713/work\n",
+      "tenacity==8.2.1\n",
+      "tensorboard==2.12.3\n",
+      "tensorboard-data-server==0.7.0\n",
+      "tensorflow==2.12.0\n",
+      "tensorflow-estimator==2.12.0\n",
+      "tensorflow-intel==2.12.0\n",
+      "tensorflow-io-gcs-filesystem==0.31.0\n",
+      "termcolor==2.3.0\n",
+      "terminado==0.9.1\n",
+      "testpath==0.4.4\n",
+      "thinc==8.0.7\n",
+      "threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl\n",
+      "tifffile==2020.10.1\n",
+      "toml @ file:///tmp/build/80754af9/toml_1592853716807/work\n",
+      "toolz @ file:///tmp/build/80754af9/toolz_1601054250827/work\n",
+      "torch==1.13.1\n",
+      "tornado==6.0.4\n",
+      "tqdm @ file:///tmp/build/80754af9/tqdm_1602185206534/work\n",
+      "traitlets @ file:///tmp/build/80754af9/traitlets_1602787416690/work\n",
+      "typer==0.3.2\n",
+      "typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1598376058250/work\n",
+      "ujson @ file:///C:/ci/ujson_1602505266082/work\n",
+      "unicodecsv==0.14.1\n",
+      "urllib3 @ file:///tmp/build/80754af9/urllib3_1603305693037/work\n",
+      "visions==0.7.1\n",
+      "wasabi==0.8.2\n",
+      "watchdog @ file:///C:/ci/watchdog_1593447437088/work\n",
+      "wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work\n",
+      "webencodings==0.5.1\n",
+      "Werkzeug==1.0.1\n",
+      "widgetsnbextension==3.5.1\n",
+      "win-inet-pton==1.1.0\n",
+      "win-unicode-console==0.5\n",
+      "wincertstore==0.2\n",
+      "wordcloud==1.9.1.1\n",
+      "wrapt==1.11.2\n",
+      "xgboost==1.7.4\n",
+      "xlrd==1.2.0\n",
+      "XlsxWriter @ file:///tmp/build/80754af9/xlsxwriter_1602692860603/work\n",
+      "xlwings==0.20.8\n",
+      "xlwt==1.3.0\n",
+      "xmltodict==0.12.0\n",
+      "yapf @ file:///tmp/build/80754af9/yapf_1593528177422/work\n",
+      "zict==2.0.0\n",
+      "zipp @ file:///tmp/build/80754af9/zipp_1604001098328/work\n",
+      "zope.event==4.5.0\n",
+      "zope.interface @ file:///C:/ci/zope.interface_1602002494740/work\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip freeze"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
    "outputs": [
